<resources>
    <string name="app_name">The Weather Man</string>
    <string name="city_name">St. Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d %%</string>
    <string name="pressure">Pressure %1$d hPa</string>

    <string name="forecast_button">forecast</string>
    <string name="temp">Temp: %1$d°</string>
    <string name="high_temp">High: %1$d°</string>
    <string name="low_temp">Low: %1$d°</string>
    <string name="humidity_forecast">Humidity: %1$d %%</string>
    <string name="pressure_forecast">Pressure:%1$d hPa</string>
    <string name="sunrise">Sunrise: </string>
    <string name="sunset">Sunset:</string>
    <string name="forcast">Forecast</string>
    <string name="forecast_date">date</string>
    <string name="zip_code">ZIP Code</string>
    <string name="searchZip">submit</string>
    <string name="ok">Ok</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getLocationButton">Get Location</string>

    <string name="location_permission_rationale">Location Permission is required to retrieve location</string>
    <string name="foreground_permission_rationale">foreground permission is required to start notifications</string>

    <string name="okay">Okay</string>
    <string name="notificationsOnText">Turn On Notifications</string>
    <string name="notificationsOffText">Turn Off Notifications</string>


    <string name="channel_name">Notification Title</string>
    <string name="channel_description">description text for channel</string>
    <string name="notification_title">"Weather App "</string>
</resources>