<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/teal_200"
    tools:context=".fragments.SearchFragment">

    <EditText
        android:id="@+id/zipcode"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/zip_code"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="6dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:text="@string/searchZip" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:text="@string/getLocationButton"/>

    <Button
        android:id="@+id/notificationButton"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:text="@string/notificationsOnText"/>

    

</LinearLayout>