<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"



    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="1dp"
        android:gravity="start|center_vertical"

        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/forecast_icon"

        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/forecast_icon"
        android:layout_height="wrap_content"
        android:layout_width="50dp"
        android:src="@drawable/sun"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/day_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:text="@string/temp"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/date"

        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/high_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:text="@string/high_temp"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/date"
        app:layout_constraintTop_toBottomOf="@id/day_temp"

        />

    <TextView
        android:id="@+id/low_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:text="@string/low_temp"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/date"
        app:layout_constraintTop_toBottomOf="@id/high_temp"

        />

    <TextView
        android:id="@+id/humidity_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_forecast"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/day_temp"
        android:layout_marginStart="5dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pressure_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_forecast"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/humidity_forecast"
        app:layout_constraintStart_toEndOf="@id/day_temp"/>

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/pressure_forecast"
        />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/pressure_forecast"
        app:layout_constraintTop_toBottomOf="@id/sunrise"
        />



</androidx.constraintlayout.widget.ConstraintLayout>